[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jeremy Reichman", email = "jaharmi@jaharmi.com"},
]
dependencies = [
    "Sphinx>=5.3.0",
    "livereload>=2.6.3",
    "myst-parser>=0.18.1",
]
requires-python = ">=3.11"
license = {text = "None"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
